// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RadioGroup snapshots > angular css mode snapshot (monolithic) 1`] = `
"import {
  Component,
  Input,
  Output,
  EventEmitter,
  AfterViewInit,
  OnChanges,
  SimpleChanges,
  ViewChildren,
  QueryList,
  ElementRef,
} from '@angular/core';
import { CommonModule } from '@angular/common';

export type RadioGroupSize = 'sm' | 'md' | 'lg';
export type RadioGroupOrientation = 'vertical' | 'horizontal';

export interface RadioGroupItem {
  value: string;
  label: string;
  disabled?: boolean;
}

let radioGroupUid = 0;

@Component({
  selector: 'app-radio-group',
  standalone: true,
  imports: [CommonModule],
  templateUrl: './radiogroup.component.html',
  styleUrls: ['./radiogroup.component.css'],
})
export class RadioGroupComponent implements AfterViewInit, OnChanges {
  @Input() items: RadioGroupItem[] = [];
  @Input() value?: string;
  @Input() defaultValue?: string;
  @Input() size: RadioGroupSize = 'md';
  @Input() orientation: RadioGroupOrientation = 'vertical';
  @Input() name?: string;

  @Output() valueChange = new EventEmitter<string>();

  @ViewChildren('radioEl') radios!: QueryList<ElementRef<HTMLButtonElement>>;

  readonly rootId = \`radio-\${++radioGroupUid}\`;
  internalValue?: string;

  ngOnChanges(changes: SimpleChanges): void {
    if (changes['value'] && changes['value'].currentValue !== undefined) {
      this.internalValue = changes['value'].currentValue;
    }
  }

  ngAfterViewInit(): void {
    if (this.internalValue === undefined) {
      this.internalValue = this.value ?? this.defaultValue;
    }
  }

  get currentValue(): string | undefined {
    return this.value ?? this.internalValue;
  }

  get rootClass(): string {
    return ['radio-group-root', \`size-\${this.size}\`].join(' ');
  }

  isSelected(item: RadioGroupItem): boolean {
    return this.currentValue === item.value;
  }

  isTabStop(item: RadioGroupItem): boolean {
    if (this.isSelected(item)) return true;
    if (this.currentValue !== undefined) return false;
    return this.firstEnabled() === item.value;
  }

  itemId(item: RadioGroupItem): string {
    return \`\${this.rootId}-radio-\${item.value.replace(/[^a-zA-Z0-9_-]/g, '_')}\`;
  }

  selectItem(item: RadioGroupItem): void {
    if (item.disabled) return;
    this.setValue(item.value);
  }

  private setValue(next: string): void {
    if (this.value === undefined) this.internalValue = next;
    this.valueChange.emit(next);
  }

  onKeydown(event: KeyboardEvent): void {
    const target = event.target as HTMLElement;
    const currentValue = target.getAttribute('data-value') ?? this.currentValue ?? '';
    const isHorizontal = this.orientation === 'horizontal';
    const nextKey = isHorizontal ? 'ArrowRight' : 'ArrowDown';
    const prevKey = isHorizontal ? 'ArrowLeft' : 'ArrowUp';

    let nextValue: string | null = null;
    if (event.key === nextKey) {
      event.preventDefault();
      nextValue = this.moveFocus(currentValue, 1);
    } else if (event.key === prevKey) {
      event.preventDefault();
      nextValue = this.moveFocus(currentValue, -1);
    } else if (event.key === 'Home') {
      event.preventDefault();
      nextValue = this.focusEdge('first');
    } else if (event.key === 'End') {
      event.preventDefault();
      nextValue = this.focusEdge('last');
    }
    if (nextValue) {
      this.setValue(nextValue);
    }
  }

  private enabledOrder(): string[] {
    return this.items.filter((i) => !i.disabled).map((i) => i.value);
  }

  private firstEnabled(): string | null {
    return this.enabledOrder()[0] ?? null;
  }

  private focusByValue(value: string): void {
    const idx = this.items.findIndex((i) => i.value === value);
    if (idx < 0) return;
    this.radios.toArray()[idx]?.nativeElement?.focus();
  }

  private moveFocus(current: string, direction: 1 | -1): string | null {
    const order = this.enabledOrder();
    if (order.length === 0) return null;
    const idx = order.indexOf(current);
    const nextIdx = idx === -1 ? 0 : (idx + direction + order.length) % order.length;
    const next = order[nextIdx];
    this.focusByValue(next);
    return next;
  }

  private focusEdge(edge: 'first' | 'last'): string | null {
    const order = this.enabledOrder();
    if (order.length === 0) return null;
    const next = edge === 'first' ? order[0] : order[order.length - 1];
    this.focusByValue(next);
    return next;
  }
}
"
`;

exports[`RadioGroup snapshots > angular css mode snapshot (monolithic) 2`] = `
"<div
  [class]="rootClass"
  role="radiogroup"
  [attr.aria-orientation]="orientation"
  [attr.data-orientation]="orientation"
  (keydown)="onKeydown($event)"
>
  @for (item of items; track item.value) {
    <label class="item" [attr.data-disabled]="item.disabled ? '' : null">
      <button
        #radioEl
        type="button"
        role="radio"
        [id]="itemId(item)"
        [attr.name]="name"
        [attr.aria-checked]="isSelected(item)"
        [attr.data-state]="isSelected(item) ? 'checked' : 'unchecked'"
        [attr.data-value]="item.value"
        [attr.data-disabled]="item.disabled ? '' : null"
        [disabled]="item.disabled"
        [attr.tabindex]="isTabStop(item) ? 0 : -1"
        class="control"
        (click)="selectItem(item)"
      >
        <span class="indicator" aria-hidden="true"></span>
      </button>
      <span class="label">{{ item.label }}</span>
    </label>
  }
</div>
"
`;

exports[`RadioGroup snapshots > react css mode snapshot 1`] = `
"import React, {
  createContext,
  useContext,
  useState,
  useMemo,
  useCallback,
  useEffect,
  useRef,
  useId,
} from 'react';
import styles from './RadioGroup.module.css';
export type RadioGroupSize = 'sm' | 'md' | 'lg';
export type RadioGroupOrientation = 'vertical' | 'horizontal';

export interface RadioGroupOptions {
  value?: string;
  defaultValue?: string;
  onValueChange?: (value: string) => void;
  orientation?: RadioGroupOrientation;
  name?: string;
}

interface ItemRegistration {
  value: string;
  disabled: boolean;
  el: HTMLButtonElement | null;
}

export function useRadioGroup({
  value: controlledValue,
  defaultValue,
  onValueChange,
  orientation = 'vertical',
  name,
}: RadioGroupOptions = {}) {
  const [uncontrolledValue, setUncontrolledValue] = useState<string | undefined>(defaultValue);
  const value = controlledValue ?? uncontrolledValue;
  const rootId = useId();
  const itemsRef = useRef<Map<string, ItemRegistration>>(new Map());
  const orderRef = useRef<string[]>([]);

  const setValue = useCallback(
    (next: string) => {
      if (controlledValue === undefined) {
        setUncontrolledValue(next);
      }
      onValueChange?.(next);
    },
    [controlledValue, onValueChange]
  );

  const registerItem = useCallback(
    (val: string, disabled: boolean, el: HTMLButtonElement | null) => {
      const map = itemsRef.current;
      if (el === null) {
        map.delete(val);
        orderRef.current = orderRef.current.filter((v) => v !== val);
        return;
      }
      if (!map.has(val)) {
        orderRef.current.push(val);
      }
      map.set(val, { value: val, disabled, el });
    },
    []
  );

  const focusItem = useCallback((val: string) => {
    const entry = itemsRef.current.get(val);
    entry?.el?.focus();
  }, []);

  const moveFocus = useCallback(
    (current: string, direction: 1 | -1) => {
      const order = orderRef.current;
      const enabled = order.filter((v) => !itemsRef.current.get(v)?.disabled);
      if (enabled.length === 0) return null;
      const idx = enabled.indexOf(current);
      const nextIdx = idx === -1 ? 0 : (idx + direction + enabled.length) % enabled.length;
      const next = enabled[nextIdx];
      focusItem(next);
      return next;
    },
    [focusItem]
  );

  const focusEdge = useCallback(
    (edge: 'first' | 'last') => {
      const enabled = orderRef.current.filter((v) => !itemsRef.current.get(v)?.disabled);
      if (enabled.length === 0) return null;
      const next = edge === 'first' ? enabled[0] : enabled[enabled.length - 1];
      focusItem(next);
      return next;
    },
    [focusItem]
  );

  const firstEnabled = useCallback(() => {
    const enabled = orderRef.current.filter((v) => !itemsRef.current.get(v)?.disabled);
    return enabled[0] ?? null;
  }, []);

  return useMemo(
    () => ({
      value,
      setValue,
      orientation,
      name,
      rootId,
      registerItem,
      focusItem,
      moveFocus,
      focusEdge,
      firstEnabled,
    }),
    [value, setValue, orientation, name, rootId, registerItem, focusItem, moveFocus, focusEdge, firstEnabled]
  );
}

type RadioGroupContextType = ReturnType<typeof useRadioGroup> | null;
const RadioGroupContext = createContext<RadioGroupContextType>(null);

const useRadioGroupContext = () => {
  const context = useContext(RadioGroupContext);
  if (context == null) {
    throw new Error('RadioGroup items must be wrapped in <RadioGroup.Root />');
  }
  return context;
};

const buildItemId = (rootId: string, value: string) =>
  \`\${rootId}-radio-\${value.replace(/[^a-zA-Z0-9_-]/g, '_')}\`;

const joinClasses = (...parts: Array<string | false | null | undefined>) =>
  parts.filter(Boolean).join(' ');

/**
 * Internal RadioGroup Components
 */
export interface RadioGroupRootProps extends RadioGroupOptions {
  children: React.ReactNode;
  size?: RadioGroupSize;
  className?: string;
}

const InternalRoot = React.forwardRef<HTMLDivElement, RadioGroupRootProps>(
  function RadioGroupRoot(
    { children, size = 'md', className, onKeyDown, ...options },
    ref
  ) {
    const group = useRadioGroup(options);

    const handleKeyDown = (e: React.KeyboardEvent<HTMLDivElement>) => {
      const target = e.target as HTMLElement;
      const currentValue = target.getAttribute('data-value') ?? group.value ?? '';

      const isHorizontal = group.orientation === 'horizontal';
      const nextKey = isHorizontal ? 'ArrowRight' : 'ArrowDown';
      const prevKey = isHorizontal ? 'ArrowLeft' : 'ArrowUp';

      let nextValue: string | null = null;

      if (e.key === nextKey) {
        e.preventDefault();
        nextValue = group.moveFocus(currentValue, 1);
      } else if (e.key === prevKey) {
        e.preventDefault();
        nextValue = group.moveFocus(currentValue, -1);
      } else if (e.key === 'Home') {
        e.preventDefault();
        nextValue = group.focusEdge('first');
      } else if (e.key === 'End') {
        e.preventDefault();
        nextValue = group.focusEdge('last');
      }

      if (nextValue) {
        group.setValue(nextValue);
      }
    };

    return (
      <RadioGroupContext.Provider value={group}>
        <div
          ref={ref}
          role="radiogroup"
          aria-orientation={group.orientation}
          className={joinClasses(styles.root, styles[\`size-\${size}\`], className)}
          data-orientation={group.orientation}
          onKeyDown={(e) => {
            onKeyDown?.(e);
            if (!e.defaultPrevented) handleKeyDown(e);
          }}
        >
          {children}
        </div>
      </RadioGroupContext.Provider>
    );
  }
);

export interface RadioGroupItemProps
  extends Omit<React.ButtonHTMLAttributes<HTMLButtonElement>, 'value'> {
  value: string;
  label?: React.ReactNode;
}

const InternalItem = React.forwardRef<HTMLButtonElement, RadioGroupItemProps>(
  function RadioGroupItem(
    { value, label, disabled = false, className, onClick, children, ...props },
    propRef
  ) {
    const ctx = useRadioGroupContext();
    const isSelected = ctx.value === value;
    const noneSelected = ctx.value === undefined;
    const isTabStop = isSelected || (noneSelected && ctx.firstEnabled() === value);
    const innerRef = useRef<HTMLButtonElement | null>(null);

    const setRef = useCallback(
      (el: HTMLButtonElement | null) => {
        innerRef.current = el;
        if (typeof propRef === 'function') propRef(el);
        else if (propRef) (propRef as React.MutableRefObject<HTMLButtonElement | null>).current = el;
        ctx.registerItem(value, disabled, el);
      },
      [ctx, value, disabled, propRef]
    );

    useEffect(() => () => ctx.registerItem(value, disabled, null), [ctx, value, disabled]);

    const handleClick = (e: React.MouseEvent<HTMLButtonElement>) => {
      onClick?.(e);
      if (e.defaultPrevented || disabled) return;
      ctx.setValue(value);
    };

    return (
      <label className={joinClasses(styles.item, className)} data-disabled={disabled || undefined}>
        <button
          ref={setRef}
          type="button"
          role="radio"
          id={buildItemId(ctx.rootId, value)}
          name={ctx.name}
          aria-checked={isSelected}
          data-state={isSelected ? 'checked' : 'unchecked'}
          data-value={value}
          data-disabled={disabled || undefined}
          disabled={disabled}
          tabIndex={isTabStop ? 0 : -1}
          className={styles.control}
          onClick={handleClick}
          {...props}
        >
          <span className={styles.indicator} aria-hidden="true" />
        </button>
        <span className={styles.label}>{label ?? children}</span>
      </label>
    );
  }
);

InternalRoot.displayName = 'RadioGroup.Root';
InternalItem.displayName = 'RadioGroup.Item';

export const RadioGroupRoot = InternalRoot;
export const RadioGroupItem = InternalItem;

/**
 * RadioGroup - Main export with compound components
 *
 * @example
 * <RadioGroup defaultValue="comfortable">
 *   <RadioGroup.Item value="default" label="Default" />
 *   <RadioGroup.Item value="comfortable" label="Comfortable" />
 *   <RadioGroup.Item value="compact" label="Compact" disabled />
 * </RadioGroup>
 */
export const RadioGroup = Object.assign(RadioGroupRoot, {
  Root: RadioGroupRoot,
  Item: RadioGroupItem,
});
"
`;

exports[`RadioGroup snapshots > react css mode snapshot 2`] = `
".root {
  display: flex;
  flex-direction: column;
  gap: var(--radio-group-gap, calc(var(--spacing-unit) * 2));
  font-family: var(--font-family, system-ui, -apple-system, sans-serif);
}

.root[data-orientation='horizontal'] {
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
}

.item {
  display: inline-flex;
  align-items: center;
  gap: var(--radio-gap, calc(var(--spacing-unit) * 2));
  cursor: pointer;
}

.item[data-disabled] {
  opacity: 0.5;
  cursor: not-allowed;
}

.control {
  all: unset;
  box-sizing: border-box;
  flex-shrink: 0;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: var(--radio-size, calc(var(--spacing-unit) * 4));
  height: var(--radio-size, calc(var(--spacing-unit) * 4));
  border: 2px solid var(--color-border, #e5e7eb);
  border-radius: 50%;
  background-color: var(--color-surface, #ffffff);
  cursor: pointer;
  transition: border-color 0.15s ease, box-shadow 0.15s ease;
}

.control[data-state='checked'] {
  border-color: var(--radio-accent, var(--color-primary));
}

.control[data-disabled] {
  cursor: not-allowed;
}

.indicator {
  width: 50%;
  height: 50%;
  border-radius: 50%;
  background-color: var(--radio-accent, var(--color-primary));
  transform: scale(0);
  transition: transform 0.15s ease;
}

.control[data-state='checked'] .indicator {
  transform: scale(1);
}

.label {
  color: var(--radio-label-color, var(--color-text));
  line-height: 1.4;
  font-size: 0.875rem;
}

.control:focus-visible {
  outline: 2px solid var(--color-primary);
  outline-offset: 3px;
}

.size-sm .control { width: calc(var(--radio-size, calc(var(--spacing-unit) * 4)) * 0.8); height: calc(var(--radio-size, calc(var(--spacing-unit) * 4)) * 0.8); }
.size-sm .label { font-size: 0.8125rem; }
.size-md .control { width: var(--radio-size, calc(var(--spacing-unit) * 4)); height: var(--radio-size, calc(var(--spacing-unit) * 4)); }
.size-md .label { font-size: 0.875rem; }
.size-lg .control { width: calc(var(--radio-size, calc(var(--spacing-unit) * 4)) * 1.25); height: calc(var(--radio-size, calc(var(--spacing-unit) * 4)) * 1.25); }
.size-lg .label { font-size: 0.9375rem; }

@media (prefers-reduced-motion: reduce) {
  .control,
  .indicator {
    transition: none;
  }
}
"
`;

exports[`RadioGroup snapshots > react css mode snapshot 3`] = `
"import React from 'react';
import type { Meta, StoryObj } from '@storybook/react';
import { RadioGroup } from './RadioGroup';

const meta: Meta<typeof RadioGroup> = {
  title: 'Crucible/RadioGroup',
  component: RadioGroup,
  tags: ['autodocs'],
};

export default meta;
type Story = StoryObj<typeof RadioGroup>;

export const Default: Story = {
  render: () => (
    <RadioGroup defaultValue="comfortable" name="density">
      <RadioGroup.Item value="default" label="Default" />
      <RadioGroup.Item value="comfortable" label="Comfortable" />
      <RadioGroup.Item value="compact" label="Compact" />
    </RadioGroup>
  ),
};

export const Horizontal: Story = {
  render: () => (
    <RadioGroup defaultValue="card" orientation="horizontal" name="payment">
      <RadioGroup.Item value="card" label="Card" />
      <RadioGroup.Item value="paypal" label="PayPal" />
      <RadioGroup.Item value="bank" label="Bank transfer" />
    </RadioGroup>
  ),
};

export const WithDisabled: Story = {
  render: () => (
    <RadioGroup defaultValue="standard" name="shipping">
      <RadioGroup.Item value="standard" label="Standard" />
      <RadioGroup.Item value="express" label="Express" />
      <RadioGroup.Item value="overnight" label="Overnight (unavailable)" disabled />
    </RadioGroup>
  ),
};

export const Sizes: Story = {
  render: () => (
    <div style={{ display: 'flex', flexDirection: 'column', gap: '24px' }}>
      <RadioGroup defaultValue="a" size="sm" name="sm">
        <RadioGroup.Item value="a" label="Small A" />
        <RadioGroup.Item value="b" label="Small B" />
      </RadioGroup>
      <RadioGroup defaultValue="a" size="lg" name="lg">
        <RadioGroup.Item value="a" label="Large A" />
        <RadioGroup.Item value="b" label="Large B" />
      </RadioGroup>
    </div>
  ),
};

export const Controlled: Story = {
  render: function ControlledStory() {
    const [value, setValue] = React.useState('one');
    return (
      <div style={{ display: 'flex', flexDirection: 'column', gap: '12px' }}>
        <RadioGroup value={value} onValueChange={setValue} name="controlled">
          <RadioGroup.Item value="one" label="One" />
          <RadioGroup.Item value="two" label="Two" />
          <RadioGroup.Item value="three" label="Three" />
        </RadioGroup>
        <span>Selected: <strong>{value}</strong></span>
      </div>
    );
  },
};
"
`;

exports[`RadioGroup snapshots > react scss mode snapshot 1`] = `
"/* Generated by Crucible — edit freely, re-generate with --force */

.root {
  display: flex;
  flex-direction: column;
  gap: var(--radio-group-gap, calc(var(--spacing-unit) * 2));
  font-family: var(--font-family, system-ui, -apple-system, sans-serif);

  &[data-orientation='horizontal'] {
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
  }
}

.item {
  display: inline-flex;
  align-items: center;
  gap: var(--radio-gap, calc(var(--spacing-unit) * 2));
  cursor: pointer;

  &[data-disabled] {
    opacity: 0.5;
    cursor: not-allowed;
  }
}

.control {
  all: unset;
  box-sizing: border-box;
  flex-shrink: 0;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: var(--radio-size, calc(var(--spacing-unit) * 4));
  height: var(--radio-size, calc(var(--spacing-unit) * 4));
  border: 2px solid var(--color-border, #e5e7eb);
  border-radius: 50%;
  background-color: var(--color-surface, #ffffff);
  cursor: pointer;
  transition: border-color 0.15s ease, box-shadow 0.15s ease;

  &[data-state='checked'] {
    border-color: var(--radio-accent, var(--color-primary));

    .indicator {
      transform: scale(1);
    }
  }

  &[data-disabled] {
    cursor: not-allowed;
  }

  &:focus-visible {
    outline: 2px solid var(--color-primary);
    outline-offset: 3px;
  }
}

.indicator {
  width: 50%;
  height: 50%;
  border-radius: 50%;
  background-color: var(--radio-accent, var(--color-primary));
  transform: scale(0);
  transition: transform 0.15s ease;
}

.label {
  color: var(--radio-label-color, var(--color-text));
  line-height: 1.4;
  font-size: 0.875rem;
}

.size-sm {
  .control {
    width: calc(var(--radio-size, calc(var(--spacing-unit) * 4)) * 0.8);
    height: calc(var(--radio-size, calc(var(--spacing-unit) * 4)) * 0.8);
  }
  .label { font-size: 0.8125rem; }
}

.size-md {
  .control {
    width: var(--radio-size, calc(var(--spacing-unit) * 4));
    height: var(--radio-size, calc(var(--spacing-unit) * 4));
  }
  .label { font-size: 0.875rem; }
}

.size-lg {
  .control {
    width: calc(var(--radio-size, calc(var(--spacing-unit) * 4)) * 1.25);
    height: calc(var(--radio-size, calc(var(--spacing-unit) * 4)) * 1.25);
  }
  .label { font-size: 0.9375rem; }
}

@media (prefers-reduced-motion: reduce) {
  .control,
  .indicator {
    transition: none;
  }
}
"
`;

exports[`RadioGroup snapshots > react tailwind mode snapshot 1`] = `
"import React, {
  createContext,
  useContext,
  useState,
  useMemo,
  useCallback,
  useEffect,
  useRef,
  useId,
} from 'react';

export type RadioGroupSize = 'sm' | 'md' | 'lg';
export type RadioGroupOrientation = 'vertical' | 'horizontal';

export interface RadioGroupOptions {
  value?: string;
  defaultValue?: string;
  onValueChange?: (value: string) => void;
  orientation?: RadioGroupOrientation;
  name?: string;
}

interface ItemRegistration {
  value: string;
  disabled: boolean;
  el: HTMLButtonElement | null;
}

export function useRadioGroup({
  value: controlledValue,
  defaultValue,
  onValueChange,
  orientation = 'vertical',
  name,
}: RadioGroupOptions = {}) {
  const [uncontrolledValue, setUncontrolledValue] = useState<string | undefined>(defaultValue);
  const value = controlledValue ?? uncontrolledValue;
  const rootId = useId();
  const itemsRef = useRef<Map<string, ItemRegistration>>(new Map());
  const orderRef = useRef<string[]>([]);

  const setValue = useCallback(
    (next: string) => {
      if (controlledValue === undefined) {
        setUncontrolledValue(next);
      }
      onValueChange?.(next);
    },
    [controlledValue, onValueChange]
  );

  const registerItem = useCallback(
    (val: string, disabled: boolean, el: HTMLButtonElement | null) => {
      const map = itemsRef.current;
      if (el === null) {
        map.delete(val);
        orderRef.current = orderRef.current.filter((v) => v !== val);
        return;
      }
      if (!map.has(val)) {
        orderRef.current.push(val);
      }
      map.set(val, { value: val, disabled, el });
    },
    []
  );

  const focusItem = useCallback((val: string) => {
    const entry = itemsRef.current.get(val);
    entry?.el?.focus();
  }, []);

  const moveFocus = useCallback(
    (current: string, direction: 1 | -1) => {
      const order = orderRef.current;
      const enabled = order.filter((v) => !itemsRef.current.get(v)?.disabled);
      if (enabled.length === 0) return null;
      const idx = enabled.indexOf(current);
      const nextIdx = idx === -1 ? 0 : (idx + direction + enabled.length) % enabled.length;
      const next = enabled[nextIdx];
      focusItem(next);
      return next;
    },
    [focusItem]
  );

  const focusEdge = useCallback(
    (edge: 'first' | 'last') => {
      const enabled = orderRef.current.filter((v) => !itemsRef.current.get(v)?.disabled);
      if (enabled.length === 0) return null;
      const next = edge === 'first' ? enabled[0] : enabled[enabled.length - 1];
      focusItem(next);
      return next;
    },
    [focusItem]
  );

  const firstEnabled = useCallback(() => {
    const enabled = orderRef.current.filter((v) => !itemsRef.current.get(v)?.disabled);
    return enabled[0] ?? null;
  }, []);

  return useMemo(
    () => ({
      value,
      setValue,
      orientation,
      name,
      rootId,
      registerItem,
      focusItem,
      moveFocus,
      focusEdge,
      firstEnabled,
    }),
    [value, setValue, orientation, name, rootId, registerItem, focusItem, moveFocus, focusEdge, firstEnabled]
  );
}

type RadioGroupContextType = ReturnType<typeof useRadioGroup> | null;
const RadioGroupContext = createContext<RadioGroupContextType>(null);

const useRadioGroupContext = () => {
  const context = useContext(RadioGroupContext);
  if (context == null) {
    throw new Error('RadioGroup items must be wrapped in <RadioGroup.Root />');
  }
  return context;
};

const buildItemId = (rootId: string, value: string) =>
  \`\${rootId}-radio-\${value.replace(/[^a-zA-Z0-9_-]/g, '_')}\`;

const cn = (...parts: Array<string | false | null | undefined>) =>
  parts.filter(Boolean).join(' ');

const ROOT_BASE =
  'flex flex-col gap-[var(--radio-group-gap,8px)] data-[orientation=horizontal]:flex-row data-[orientation=horizontal]:flex-wrap data-[orientation=horizontal]:items-center';

const ITEM_BASE =
  'inline-flex items-center gap-[var(--radio-gap,8px)] cursor-pointer data-[disabled]:opacity-50 data-[disabled]:cursor-not-allowed';

const CONTROL_BASE = [
  'shrink-0 inline-flex items-center justify-center',
  'rounded-full border-2 border-[var(--color-border)] bg-[var(--color-surface)]',
  'cursor-pointer transition-[border-color,box-shadow] duration-150',
  'data-[state=checked]:border-[var(--radio-accent,var(--color-primary))]',
  'data-[disabled]:cursor-not-allowed',
  'focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[var(--color-primary)]',
].join(' ');

const INDICATOR_BASE =
  'w-1/2 h-1/2 rounded-full bg-[var(--radio-accent,var(--color-primary))] scale-0 transition-transform duration-150 [button[data-state=checked]_&]:scale-100';

const LABEL_BASE = 'text-[var(--radio-label-color,var(--color-text))] leading-snug';

const SIZE_CONTROL: Record<RadioGroupSize, string> = {
  sm: 'w-[calc(var(--radio-size,16px)*0.8)] h-[calc(var(--radio-size,16px)*0.8)]',
  md: 'w-[var(--radio-size,16px)] h-[var(--radio-size,16px)]',
  lg: 'w-[calc(var(--radio-size,16px)*1.25)] h-[calc(var(--radio-size,16px)*1.25)]',
};

const SIZE_LABEL: Record<RadioGroupSize, string> = {
  sm: 'text-[0.8125rem]',
  md: 'text-sm',
  lg: 'text-[0.9375rem]',
};

/**
 * Internal RadioGroup Components
 */
export interface RadioGroupRootProps extends RadioGroupOptions {
  children: React.ReactNode;
  size?: RadioGroupSize;
  className?: string;
}

const InternalRoot = React.forwardRef<HTMLDivElement, RadioGroupRootProps>(
  function RadioGroupRoot(
    { children, size = 'md', className, onKeyDown, ...options },
    ref
  ) {
    const group = useRadioGroup(options);

    const handleKeyDown = (e: React.KeyboardEvent<HTMLDivElement>) => {
      const target = e.target as HTMLElement;
      const currentValue = target.getAttribute('data-value') ?? group.value ?? '';

      const isHorizontal = group.orientation === 'horizontal';
      const nextKey = isHorizontal ? 'ArrowRight' : 'ArrowDown';
      const prevKey = isHorizontal ? 'ArrowLeft' : 'ArrowUp';

      let nextValue: string | null = null;

      if (e.key === nextKey) {
        e.preventDefault();
        nextValue = group.moveFocus(currentValue, 1);
      } else if (e.key === prevKey) {
        e.preventDefault();
        nextValue = group.moveFocus(currentValue, -1);
      } else if (e.key === 'Home') {
        e.preventDefault();
        nextValue = group.focusEdge('first');
      } else if (e.key === 'End') {
        e.preventDefault();
        nextValue = group.focusEdge('last');
      }

      if (nextValue) {
        group.setValue(nextValue);
      }
    };

    return (
      <RadioGroupContext.Provider value={group}>
        <div
          ref={ref}
          role="radiogroup"
          aria-orientation={group.orientation}
          className={cn(ROOT_BASE, className)}
          data-orientation={group.orientation}
          data-size={size}
          onKeyDown={(e) => {
            onKeyDown?.(e);
            if (!e.defaultPrevented) handleKeyDown(e);
          }}
        >
          {children}
        </div>
      </RadioGroupContext.Provider>
    );
  }
);

export interface RadioGroupItemProps
  extends Omit<React.ButtonHTMLAttributes<HTMLButtonElement>, 'value'> {
  value: string;
  label?: React.ReactNode;
  size?: RadioGroupSize;
}

const InternalItem = React.forwardRef<HTMLButtonElement, RadioGroupItemProps>(
  function RadioGroupItem(
    { value, label, disabled = false, size = 'md', className, onClick, children, ...props },
    propRef
  ) {
    const ctx = useRadioGroupContext();
    const isSelected = ctx.value === value;
    const noneSelected = ctx.value === undefined;
    const isTabStop = isSelected || (noneSelected && ctx.firstEnabled() === value);
    const innerRef = useRef<HTMLButtonElement | null>(null);

    const setRef = useCallback(
      (el: HTMLButtonElement | null) => {
        innerRef.current = el;
        if (typeof propRef === 'function') propRef(el);
        else if (propRef) (propRef as React.MutableRefObject<HTMLButtonElement | null>).current = el;
        ctx.registerItem(value, disabled, el);
      },
      [ctx, value, disabled, propRef]
    );

    useEffect(() => () => ctx.registerItem(value, disabled, null), [ctx, value, disabled]);

    const handleClick = (e: React.MouseEvent<HTMLButtonElement>) => {
      onClick?.(e);
      if (e.defaultPrevented || disabled) return;
      ctx.setValue(value);
    };

    return (
      <label className={cn(ITEM_BASE, className)} data-disabled={disabled || undefined}>
        <button
          ref={setRef}
          type="button"
          role="radio"
          id={buildItemId(ctx.rootId, value)}
          name={ctx.name}
          aria-checked={isSelected}
          data-state={isSelected ? 'checked' : 'unchecked'}
          data-value={value}
          data-disabled={disabled || undefined}
          disabled={disabled}
          tabIndex={isTabStop ? 0 : -1}
          className={cn(CONTROL_BASE, SIZE_CONTROL[size])}
          onClick={handleClick}
          {...props}
        >
          <span className={INDICATOR_BASE} aria-hidden="true" />
        </button>
        <span className={cn(LABEL_BASE, SIZE_LABEL[size])}>{label ?? children}</span>
      </label>
    );
  }
);

InternalRoot.displayName = 'RadioGroup.Root';
InternalItem.displayName = 'RadioGroup.Item';

export const RadioGroupRoot = InternalRoot;
export const RadioGroupItem = InternalItem;

/**
 * RadioGroup - Main export with compound components
 */
export const RadioGroup = Object.assign(RadioGroupRoot, {
  Root: RadioGroupRoot,
  Item: RadioGroupItem,
});
"
`;

exports[`RadioGroup snapshots > vue css mode snapshot 1`] = `
"<script lang="ts">
import {
  defineComponent,
  h,
  inject,
  provide,
  reactive,
  getCurrentInstance,
  onMounted,
  onBeforeUnmount,
  ref,
  type InjectionKey,
  type PropType,
} from 'vue';

export type RadioGroupSize = 'sm' | 'md' | 'lg';
export type RadioGroupOrientation = 'vertical' | 'horizontal';

export interface RadioGroupItem {
  value: string;
  label: string;
  disabled?: boolean;
}

interface ItemRegistration {
  value: string;
  disabled: boolean;
  el: HTMLButtonElement | null;
}

export interface RadioGroupApi {
  readonly value: string | undefined;
  setValue: (next: string) => void;
  orientation: RadioGroupOrientation;
  name: string | undefined;
  rootId: string;
  registerItem: (val: string, disabled: boolean, el: HTMLButtonElement | null) => void;
  firstEnabled: () => string | null;
}

export const RadioGroupContextKey: InjectionKey<RadioGroupApi> = Symbol('crucible-radio-group');

function useRadioGroupApi(): RadioGroupApi {
  const ctx = inject(RadioGroupContextKey, null);
  if (!ctx) throw new Error('RadioGroup items must be used inside <RadioGroup />');
  return ctx;
}

export const buildItemId = (rootId: string, value: string) =>
  \`\${rootId}-radio-\${value.replace(/[^a-zA-Z0-9_-]/g, '_')}\`;

export const RadioGroupItemComp = defineComponent({
  name: 'RadioGroupItem',
  props: {
    value: { type: String, required: true },
    label: { type: String, default: '' },
    disabled: { type: Boolean, default: false },
  },
  setup(props, { slots }) {
    const group = useRadioGroupApi();
    const elRef = ref<HTMLButtonElement | null>(null);

    onMounted(() => group.registerItem(props.value, props.disabled, elRef.value));
    onBeforeUnmount(() => group.registerItem(props.value, props.disabled, null));

    return () => {
      const isSelected = group.value === props.value;
      const noneSelected = group.value === undefined;
      const isTabStop = isSelected || (noneSelected && group.firstEnabled() === props.value);
      return h(
        'label',
        {
          class: 'item',
          'data-disabled': props.disabled ? '' : undefined,
        },
        [
          h(
            'button',
            {
              ref: (el: any) => (elRef.value = el as HTMLButtonElement | null),
              type: 'button',
              role: 'radio',
              id: buildItemId(group.rootId, props.value),
              name: group.name,
              'aria-checked': isSelected,
              'data-state': isSelected ? 'checked' : 'unchecked',
              'data-value': props.value,
              'data-disabled': props.disabled ? '' : undefined,
              disabled: props.disabled,
              tabindex: isTabStop ? 0 : -1,
              class: 'control',
              onClick: () => {
                if (props.disabled) return;
                group.setValue(props.value);
              },
            },
            [h('span', { class: 'indicator', 'aria-hidden': 'true' })],
          ),
          h('span', { class: 'label' }, slots.default ? slots.default() : props.label),
        ],
      );
    };
  },
});
</script>

<script setup lang="ts">
const props = withDefaults(
  defineProps<{
    size?: RadioGroupSize;
    value?: string;
    defaultValue?: string;
    orientation?: RadioGroupOrientation;
    name?: string;
    /** Schema-driven (monolithic) */
    items?: RadioGroupItem[];
  }>(),
  { size: 'md', orientation: 'vertical', items: () => [] },
);

const emit = defineEmits<{
  (e: 'update:value', value: string): void;
  (e: 'valueChange', value: string): void;
}>();

const uid = (getCurrentInstance()?.uid ?? Math.floor(Math.random() * 1e9)).toString(36);
const rootId = \`radio-\${uid}\`;

const items = new Map<string, ItemRegistration>();
const order: string[] = [];

const internal = reactive({ value: props.value ?? props.defaultValue });

const setValue = (next: string) => {
  if (props.value === undefined) internal.value = next;
  emit('update:value', next);
  emit('valueChange', next);
};

const registerItem = (val: string, disabled: boolean, el: HTMLButtonElement | null) => {
  if (el === null) {
    items.delete(val);
    const idx = order.indexOf(val);
    if (idx >= 0) order.splice(idx, 1);
    return;
  }
  if (!items.has(val)) order.push(val);
  items.set(val, { value: val, disabled, el });
};

const focusItem = (val: string) => {
  items.get(val)?.el?.focus();
};

const enabledOrder = () => order.filter((v) => !items.get(v)?.disabled);

const firstEnabled = () => enabledOrder()[0] ?? null;

const moveFocus = (current: string, direction: 1 | -1) => {
  const enabled = enabledOrder();
  if (enabled.length === 0) return null;
  const idx = enabled.indexOf(current);
  const nextIdx = idx === -1 ? 0 : (idx + direction + enabled.length) % enabled.length;
  const next = enabled[nextIdx];
  focusItem(next);
  return next;
};

const focusEdge = (edge: 'first' | 'last') => {
  const enabled = enabledOrder();
  if (enabled.length === 0) return null;
  const next = edge === 'first' ? enabled[0] : enabled[enabled.length - 1];
  focusItem(next);
  return next;
};

const onKeydown = (e: KeyboardEvent) => {
  const target = e.target as HTMLElement;
  const currentValue = target.getAttribute('data-value') ?? props.value ?? internal.value ?? '';
  const isHorizontal = props.orientation === 'horizontal';
  const nextKey = isHorizontal ? 'ArrowRight' : 'ArrowDown';
  const prevKey = isHorizontal ? 'ArrowLeft' : 'ArrowUp';

  let nextValue: string | null = null;
  if (e.key === nextKey) {
    e.preventDefault();
    nextValue = moveFocus(currentValue, 1);
  } else if (e.key === prevKey) {
    e.preventDefault();
    nextValue = moveFocus(currentValue, -1);
  } else if (e.key === 'Home') {
    e.preventDefault();
    nextValue = focusEdge('first');
  } else if (e.key === 'End') {
    e.preventDefault();
    nextValue = focusEdge('last');
  }
  if (nextValue) setValue(nextValue);
};

const api: RadioGroupApi = {
  get value() {
    return props.value ?? internal.value;
  },
  setValue,
  get orientation() {
    return props.orientation;
  },
  get name() {
    return props.name;
  },
  rootId,
  registerItem,
  firstEnabled,
};

provide(RadioGroupContextKey, api);
</script>

<template>
  <div
    :class="['radio-group-root', \`size-\${size}\`]"
    role="radiogroup"
    :aria-orientation="orientation"
    :data-orientation="orientation"
    @keydown="onKeydown"
  >
    <slot :api="api" />
  </div>
</template>

<!--
  NOT scoped: RadioGroupItem is a separate component instance, so Vue's scoped
  styles would not reach its DOM. Each rule is qualified by .radio-group-root.
-->
<style >
.radio-group-root {
  display: flex;
  flex-direction: column;
  gap: var(--radio-group-gap, calc(var(--spacing-unit) * 2));
  font-family: var(--font-family, system-ui, -apple-system, sans-serif);
}
.radio-group-root[data-orientation='horizontal'] {
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
}
.radio-group-root .item {
  display: inline-flex;
  align-items: center;
  gap: var(--radio-gap, calc(var(--spacing-unit) * 2));
  cursor: pointer;
}
.radio-group-root .item[data-disabled] {
  opacity: 0.5;
  cursor: not-allowed;
}
.radio-group-root .control {
  all: unset;
  box-sizing: border-box;
  flex-shrink: 0;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: var(--radio-size, calc(var(--spacing-unit) * 4));
  height: var(--radio-size, calc(var(--spacing-unit) * 4));
  border: 2px solid var(--color-border, #e5e7eb);
  border-radius: 50%;
  background-color: var(--color-surface, #ffffff);
  cursor: pointer;
  transition: border-color 0.15s ease, box-shadow 0.15s ease;
}
.radio-group-root .control[data-state='checked'] {
  border-color: var(--radio-accent, var(--color-primary));
}
.radio-group-root .control[data-disabled] {
  cursor: not-allowed;
}
.radio-group-root .indicator {
  width: 50%;
  height: 50%;
  border-radius: 50%;
  background-color: var(--radio-accent, var(--color-primary));
  transform: scale(0);
  transition: transform 0.15s ease;
}
.radio-group-root .control[data-state='checked'] .indicator {
  transform: scale(1);
}
.radio-group-root .label {
  color: var(--radio-label-color, var(--color-text));
  line-height: 1.4;
  font-size: 0.875rem;
}
.radio-group-root .control:focus-visible {
  outline: 2px solid var(--color-primary);
  outline-offset: 3px;
}
.radio-group-root.size-sm .control { width: calc(var(--radio-size, calc(var(--spacing-unit) * 4)) * 0.8); height: calc(var(--radio-size, calc(var(--spacing-unit) * 4)) * 0.8); }
.radio-group-root.size-sm .label { font-size: 0.8125rem; }
.radio-group-root.size-md .control { width: var(--radio-size, calc(var(--spacing-unit) * 4)); height: var(--radio-size, calc(var(--spacing-unit) * 4)); }
.radio-group-root.size-md .label { font-size: 0.875rem; }
.radio-group-root.size-lg .control { width: calc(var(--radio-size, calc(var(--spacing-unit) * 4)) * 1.25); height: calc(var(--radio-size, calc(var(--spacing-unit) * 4)) * 1.25); }
.radio-group-root.size-lg .label { font-size: 0.9375rem; }
@media (prefers-reduced-motion: reduce) {
  .radio-group-root .control,
  .radio-group-root .indicator { transition: none; }
}
</style>
"
`;
